# image-anarchy

./: .gitattributes  .gitignore  LICENSE  README.md  image_anarchy.py  mtk_dump_tools.py  pyproject.toml  requirements.txt  visual_plugin_maker_v2.py
.github/workflows/: python-publish.yml
docs/superpowers/plans/: 2026-06-19-dump-surgeon.md  2026-07-19-qualcomm-edl-toolkit-phase1.md  2026-07-20-qualcomm-edl-toolkit-phase2.md
docs/superpowers/specs/: 2026-06-19-dump-surgeon-design.md  2026-07-19-qualcomm-edl-toolkit-design.md
plugins/adb_toolkit/: description.html  manifest.json  plugin.py
plugins/developer_guide/: manifest.json  plugin.py
plugins/fastboot_toolkit/: description.html  manifest.json  plugin.py
plugins/iaabs/: description.html  manifest.json  plugin.py
plugins/mtk_toolkit/: description.html  manifest.json  plugin.py  private_1024.pem  private_2048.pem
plugins/qualcomm_edl_toolkit/: description.html  devinfo.py  driver_manager.py  edl_paths.py  edl_util.py  ident.py  loader_manager.py  manifest.json  plugin.py  qedl_ident.py
plugins/qualcomm_edl_toolkit/drivers/: winusb_9008.inf
plugins/qualcomm_edl_toolkit/tests/: conftest.py  test_devinfo.py  test_driver_manager.py  test_edl_paths.py  test_edl_util.py  test_ident.py  test_loader_manager.py
plugins/root_patcher/: description.html  manifest.json  plugin.py
plugins/scrcpy_toolkit/: description.html  manifest.json  plugin.py
tests/: test_mtk_dump_tools.py
www/: index.html
