[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-anarchy"
version = "3.2.0"
description = "Android Image Swiss Army Knife — Extract, create, and manipulate Android images with anarchic freedom."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "vehoelite"},
]
keywords = [
    "android", "payload", "ota", "boot", "recovery", "sparse",
    "vbmeta", "avb", "super", "partition", "image", "extract",
    "repack", "fastboot", "adb", "root", "unlock",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "PyQt6>=6.4.0",
    "protobuf>=5.27.3",
    "bsdiff4>=1.1.5",
    "brotli>=1.1.0",
    "zstandard>=0.23.0",
    "fsspec>=2023.0.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
signing = ["cryptography>=40.0.0"]
lz4 = ["lz4>=4.0.0"]
chat = [
    "python-socketio[client]>=5.10.0",
    "websocket-client>=1.6.0",
    "curl_cffi>=0.5.0",
]
webengine = ["PyQt6-WebEngine>=6.4.0"]
all = [
    "cryptography>=40.0.0",
    "lz4>=4.0.0",
    "python-socketio[client]>=5.10.0",
    "websocket-client>=1.6.0",
    "curl_cffi>=0.5.0",
    "PyQt6-WebEngine>=6.4.0",
]

[project.urls]
Homepage = "https://imageanarchy.com"
Repository = "https://github.com/vehoelite/image-anarchy"
Issues = "https://github.com/vehoelite/image-anarchy/issues"

[project.scripts]
image-anarchy = "image_anarchy:main"

[project.gui-scripts]
image-anarchy-gui = "image_anarchy:main"

[tool.setuptools]
py-modules = ["image_anarchy"]

[tool.setuptools.packages.find]
include = ["plugins*"]
exclude = [
    "build*", "dist*", "__pycache__*", "*.spec",
    "python_embedded*", "PortableGit*", "platform-tools*",
    "extracted_images*", "mtkclient-2.1.2*", "aapanel-*",
    "plugin_packages*", "screenshots*", "debug*", "www*",
    "forum*", "freelance*", "tools*", "drivers*",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]
